--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@
 }
 
 .orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
+  @apply bg-gradient-to-r from-blue-700 via-green-700 to-cyan-700 bg-clip-text text-transparent;
 }
 
 .desc {
